OrtRuntime fails while loading the native onnxruntime library (ExceptionInInitializerError). That is an Error, not an Exception, so OnnxService’s catch (Exception) did not handle it and Quarkus aborted.
Fix applied: OnnxService now catches Throwable, logs a clear message, and continues without ONNX models (same idea as a missing chat model). OrtRuntime also wraps init failures with setup hints.